--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,20 @@
 {
-  "extends": "astro/tsconfigs/strict"
+	"extends": "astro/tsconfigs/strict",
+	"compilerOptions": {
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true, 
+		"jsx": "react-jsx",
+		"jsxImportSource": "react",
+		"types": ["node"],
+		"baseUrl": ".",
+		"paths": {
+			"@scripts/*": ["src/scripts/*"],
+			"@shared/*": ["src/shared/*"],
+			"@widgets/*": ["src/widgets/*"],
+			"@entities/*": ["src/entities/*"],
+			"@features/*": ["src/features/*"],
+			"@pages/*": ["src/pages/*"],
+			"@assets/*": ["src/assets/*"]
+		}
+	}
 }
