--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.0",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/mdx": "^2.3.1",
+    "@astrojs/react": "^3.3.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.7.0",
+    "astro-icon": "^1.1.0",
+    "autoprefixer": "^10.4.19",
+    "react": "^18.3.1",
+    "sass": "^1.76.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "breakpoint-slicer": "^3.0.0-beta.1"
   }
 }
