--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.7.0",
     "astro-icon": "^1.1.0",
     "autoprefixer": "^10.4.19",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "sass": "^1.76.0",
     "tailwind": "^4.0.0",
