--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/react": "^3.3.1",
     "@astrojs/tailwind": "^5.1.0",
+    "animate.css": "^4.1.1",
     "astro": "^4.7.0",
     "astro-icon": "^1.1.0",
     "autoprefixer": "^10.4.19",
